--- a/src/assets/css/public.css
+++ b/src/assets/css/public.css
@@ -1,8 +1,8 @@
 /*
  * @Author: Alex chenzeyongjsj@163.com 
  * @Date: 2018-02-28 16:42:54 
- * @Last Modified by:   Alex chenzeyongjsj@163.com 
- * @Last Modified time: 2018-02-28 16:42:54 
+ * @Last Modified by: Alex chenzeyongjsj@163.com
+ * @Last Modified time: 2018-03-13 14:28:33
  */
 html,
 body,
@@ -90,12 +90,10 @@ a {
 .float-right {
   float: right;
 }
-/*
- * @Author: alex (chenzeyongjsj@163.com) 
- * @Date: 2018-01-25 21:07:45 
- * @Last Modified by: alex (chenzeyongjsj@163.com)
- * @Last Modified time: 2018-01-25 21:14:20
- */
 [v-cloak] {
   display: none;
+}
+.mint-msgbox-confirm {
+  font-size: 0.65rem;
+  letter-spacing: 0.1rem;
 }
