--- a/src/assets/css/public.less
+++ b/src/assets/css/public.less
@@ -1,9 +1,10 @@
 /*
  * @Author: Alex chenzeyongjsj@163.com 
  * @Date: 2018-02-28 16:42:54 
- * @Last Modified by:   Alex chenzeyongjsj@163.com 
- * @Last Modified time: 2018-02-28 16:42:54 
+ * @Last Modified by: Alex chenzeyongjsj@163.com
+ * @Last Modified time: 2018-03-13 14:28:33
  */
+
 html,
 body,
 div,
@@ -96,11 +97,11 @@ a {
     float: right;
 }
 
-@import "./less_config";
 [v-cloak] {
     display: none;
 }
 
-html {}
-
-body {}
+.mint-msgbox-confirm {
+    font-size: 0.65rem;
+    letter-spacing: 0.1rem;
+}
